# fcitx5-simpleInputMethod

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  simpleim-addon.conf.in  simpleim.conf.in  simpleim.cpp  simpleim.h  sogouim-addon.conf.in  sogouim.conf.in  sogouim.cpp  sogouim.h
